<resources>
    <!-- Elementos generales -->
    <string name="salon_name">Charly\'s Salon</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>

    <!-- Elementos de inicio de sesión -->
    <string name="login">Iniciar sesión</string>
    <string name="unregistered">¿No estás registrado?</string>
    <string name="sign_up">Regístrate</string>

    <!-- Validación de formulario -->
    <string name="error_email">Ingresa un correo válido</string>
    <string name="error_password">Ingresa una contraseña válida\nMin. 6 caractéres</string>
    <string name="error_name">Ingresa un nombre válido</string>
    <string name="error_year">Ingresa una fecha válida \nLa fecha debe ser Día/Mes/Año \nEdad mínima 16</string>
    <string name="wrong_password">Las contraseñas no coinciden</string>
    <string name="error_phone">Ingresa un teléfono válido \nDebe contener 10 números</string>
    <string name="email_not_found">No se encuentra la cuenta</string>
    <string name="email_not_match">Contraseña incorrecta</string>

    <!-- Elementos de registro -->
    <string name="first_name">Nombre (s)</string>
    <string name="last_name">Apellido (s)</string>
    <string name="phone">Teléfono</string>
    <string name="password2">Confirmar contraseña</string>
    <string name="dob">Fec. Nac. p. ej. 29/05/1998</string>

    <!-- Elementos Home -->
    <string name="schedule_date">Agendar cita</string>
    <string name="select_date">Ver citas</string>
    <string name="update_account">Editar cuenta</string>
    <string name="exit">Salir</string>
    <string name="home">Home</string>
    <string name="about_me">Conoce Charly\'s Salon</string>
    <string name="session_type">Tipo de sesión</string>

    <!-- Elementos Agendar cita -->
    <string name="date">Fecha</string>
    <string name="time">Hora</string>

    <!-- Error agendando cita -->
    <string name="error_type">Debes seleccionar una sesión</string>
    <string name="error_date">Debes seleccionar una fecha</string>
    <string name="error_time">Debes seleccionar una hora</string>
    <string name="confirm_date">¿Guardar cita?</string>
    <string name="select_schedule_date">Selecciona una cita</string>
    <string name="empty_dates">Aún no haz reservado cita :(</string>
    <string name="update_date">Cambiar cita</string>
    <string name="cancel_date">Cancelar cita</string>
    <string name="try_again">Intentar de nuevo</string>
    <string name="date_schedule_date">Fecha que se realizó la cita</string>

    <string name="are_sure">¿Cancelar cita?</string>
    <string name="delete">La cita se cancelará y se perderá el lugar</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="visit_us">Visitanos!</string>
    <string name="location">Blvd. Venustiano Carranza, Privada Tecnológico 2400, 25280 Saltillo, Coah.</string>
    <string name="made_by">App realizada por Carlos Cruz</string>
    <string name="icons_thanks">Los iconos se obtuvieron gracias a:</string>
    <string-array name="icon">
        <item>Créditos de los iconos</item>
        <item>Icon made by Freepik from www.flaticon.com</item>
        <item>Icon made by icoongeek26 from www.flaticon.com</item>
        <item>Icon made by Alfredo Hernandez from www.flaticon.com</item>
        <item>Icon made by Nikita Golubev from www.flaticon.com</item>
    </string-array>
</resources>