<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastel_violet"
    tools:context=".ScheduleDate">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/linear_layout_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:contentDescription="@string/schedule_date"
                app:srcCompat="@drawable/ic_plan_date" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/session_type" />

            <Spinner
                android:id="@+id/spinnerType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>

            <TextView
                android:id="@+id/textViewType"
                android:textColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_type"
                android:visibility="gone"
                tools:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <Spinner
                android:id="@+id/spinnerDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>

            <TextView
                android:id="@+id/textViewDate"
                android:textColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_date"
                android:visibility="gone"
                tools:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <Spinner
                android:id="@+id/spinnerTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>

            <TextView
                android:id="@+id/textViewTime"
                android:textColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_time"
                android:visibility="gone"
                tools:visibility="gone" />

            <Button
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonSave"
                android:text="@string/schedule_date" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>