<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            style="@style/login"
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/ic_user"
            android:contentDescription="@string/login" />

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            style="@style/login"
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/buttonLogin"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonLogin"
            android:text="@string/login" />

        <TextView
            android:id="@+id/textView2"
            style="@style/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/unregistered" />

        <Button
            android:id="@+id/buttonSignUp"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <TextView
            style="@style/login"
            android:id="@+id/textViewError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/red" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>